--- a/docs/BASICS/点击动作.md
+++ b/docs/BASICS/点击动作.md
@@ -8,7 +8,7 @@ sidebar_position: 5
 
 这里有许多不同类型的前缀来供你选择 不同的前缀是不同的功能
 
-> ACTION 可以使用颜色、[symbols](symbols.md)和[占位符](占位符.md)
+> ACTION 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
 
 如果某个action打开了另一个箱子菜单或外部插件的GUI，请设置 `KEEP-OPEN:true`
 
@@ -52,7 +52,7 @@ ACTIONS:
 
 ## `打开其他菜单`
 
-打开其他菜单 需要特定[权限](权限.md)
+打开其他菜单 需要特定[权限](/docs/ADMINISTRATION/权限.md)
 
 格式: `open: <file>`
 
@@ -114,7 +114,7 @@ ACTIONS:
 
 ## `给钱`
 
-给钱 得设置[经济](安装.md)
+给钱 得设置 [经济](/docs/BASICS/安装.md)
 
 格式: `give-money: <amount>`
 
