--- a/docs/BASICS/物品属性.md
+++ b/docs/BASICS/物品属性.md
@@ -64,7 +64,7 @@ POSITION-Y: 1
 
 玩家点击后执行动作的列表，像例子这样没有前缀就是直接执行命令
 
-更多的动作见 [点击动作](点击动作.md)
+更多的动作见 [点击动作](/docs/BASICS/点击动作.md)
 
 例子:
 ```
@@ -76,7 +76,7 @@ ACTIONS:
 
 数据类型: string
 
-物品名称 可以使用颜色、[symbols](symbols.md)和[占位符](占位符.md)
+物品名称 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
 
 例子:
 ```
@@ -87,7 +87,7 @@ NAME: '&6This is a colored name!'
 
 数据类型: list
 
-物品lore 可以使用颜色、[symbols](symbols.md)和[占位符](占位符.md)
+物品lore 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
 
 例子:
 ```
@@ -230,7 +230,7 @@ BANNER-PATTERNS:
 
 执行此icon的点击动作需要的money
 
-需要配置 [经济](安装.md)
+需要配置 [经济](/docs/BASICS/安装.md)
 
 例子:
 ```
