--- a/docs/ADMINISTRATION/权限.md
+++ b/docs/ADMINISTRATION/权限.md
@@ -18,8 +18,8 @@ sidebar_position: 2
 | ----------- | ----------- |
 |chestcommands.command.help | /cc help |
 |chestcommands.command.open | /cc open <file> |
-|chestcommands.command.open.others | /cc open <file> [player] Note: 该权限还授予打开所有菜单的权限. |
-|chestcommands.command.list | /cc list |
+<!-- |chestcommands.command.open.others | /cc open <file> [player] Note: 该权限还授予打开所有菜单的权限. |
+|chestcommands.command.list | /cc list | -->
 |chestcommands.command.reload | /cc reload |
 
 ## 管理员功能权限
