--- a/docs/BASICS/物品属性.md
+++ b/docs/BASICS/物品属性.md
@@ -170,7 +170,7 @@ ENCHANTMENTS:
 
 设置皮革装备的颜色
 
-格式: <red>, <green>, <blue> 取值在 0 and 255 之间
+格式: `<red>, <green>, <blue>` 取值在 0 and 255 之间
 
 其实就是RGB颜色
 
