--- a/docs/ADMINISTRATION/权限.md
+++ b/docs/ADMINISTRATION/权限.md
@@ -10,7 +10,7 @@ sidebar_position: 2
 
 | 权限 | 描述 |
 | ----------- | ----------- |
-| chestcommands.open.<file>.yml | 菜单打开权限，文件名不能包含空格 |
+<!-- | chestcommands.open.<file>.yml | 菜单打开权限，文件名不能包含空格 | -->
 
 ## 管理员权限
 
