--- a/docs/ADMINISTRATION/权限.md
+++ b/docs/ADMINISTRATION/权限.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 sidebar_position: 2
 ---
 
@@ -10,7 +10,7 @@ sidebar_position: 2
 
 | 权限 | 描述 |
 | ----------- | ----------- |
-<!-- | chestcommands.open.<file>.yml | 菜单打开权限，文件名不能包含空格 | -->
+| chestcommands.open.<file>.yml | 菜单打开权限，文件名不能包含空格 |
 
 ## 管理员权限
 
@@ -18,8 +18,8 @@ sidebar_position: 2
 | ----------- | ----------- |
 |chestcommands.command.help | /cc help |
 |chestcommands.command.open | /cc open <file> |
-<!-- |chestcommands.command.open.others | /cc open <file> [player] Note: 该权限还授予打开所有菜单的权限. |
-|chestcommands.command.list | /cc list | -->
+|chestcommands.command.open.others | /cc open <file> [player] Note: 该权限还授予打开所有菜单的权限. |
+|chestcommands.command.list | /cc list |
 |chestcommands.command.reload | /cc reload |
 
 ## 管理员功能权限
@@ -28,4 +28,4 @@ sidebar_position: 2
 | ----------- | ----------- |
 |chestcommands.sign | 创建告示牌菜单 |
 |chestcommands.economy.bypass | 绕过经济花费 |
-|chestcommands.update | 接收进入服务器的更新通知 |
+|chestcommands.update | 接收进入服务器的更新通知 | -->
